--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center top;
+  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -98,4 +98,18 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+main {
+  display: flex;
+  justify-content: center;
+}
+
+.wrapper {
+  background-color: #fff;
+  height: 350px;
+  max-width: 800px;
+  background: rgb(59, 57, 57);
+  border-radius: 10px;
+  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.1);
+  padding: 20px 25px 0;
 }
